--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "Florent Lamoureux @flrent",
   "license": "MIT",
   "readmeFilename": "README.md",
-  "devDependencies": {
+  "dependencies": {
     "grunt": "~0.4.1",
     "aws-sdk": "~1.0.0",
     "moment": "~2.0.0",
